clusters/production/core/gateway/gateway-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: gateway
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
