clusters/production/core/gateway/external-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
  namespace: gateway
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns
spec:
  gatewayClassName: cilium
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
    hostname: "*.rees.ca"
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: external-gateway-tls
    allowedRoutes:
      namespaces:
        from: All
  - name: exuone-dev-api-aa
    protocol: HTTPS
    port: 443
    hostname: devapi.automatedassessment.com
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: exuone-dev-tls
    allowedRoutes:
      namespaces:
        from: All
  - name: exuone-dev-api-exuone
    protocol: HTTPS
    port: 443
    hostname: devapi.exuone.com
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: exuone-dev-tls
    allowedRoutes:
      namespaces:
        from: All
  - name: exuone-dev-portal-aa
    protocol: HTTPS
    port: 443
    hostname: devportal.automatedassessment.com
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: exuone-dev-tls
    allowedRoutes:
      namespaces:
        from: All
  - name: exuone-dev-portal-exuone
    protocol: HTTPS
    port: 443
    hostname: devportal.exuone.com
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: exuone-dev-tls
    allowedRoutes:
      namespaces:
        from: All
