clusters/production/core/gateway/internal-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  namespace: gateway
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns
spec:
  gatewayClassName: cilium
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
    hostname: "*.rees.ca"
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: internal-gateway-tls
    allowedRoutes:
      namespaces:
        from: All
